--- a/genweb/organs/locales/es/LC_MESSAGES/genweb.organs.po
+++ b/genweb/organs/locales/es/LC_MESSAGES/genweb.organs.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2017-07-12 13:08+0000\n"
+"POT-Creation-Date: 2017-07-13 11:01+0000\n"
 "PO-Revision-Date: 2017-04-20 14:05+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -73,6 +73,10 @@ msgstr "Fichero en formato PDF del acta. Sólo se aceptan ficheros en formato PD
 msgid "Actes de la sessio:"
 msgstr "Actas de la sesión:"
 
+#: ./genweb/organs/content/templates/organgovern_view.pt:208
+msgid "Actes list"
+msgstr "Actas"
+
 #: ./genweb/organs/content/manualimport.py:26
 msgid "Add content separated by -- and they will by added as Agreements."
 msgstr "El formato ha de ser un punto/subpunto/acuerdo por línea i sin el número ya que se calcúla automáticamente. Antes de cada punto/subpunto ha de ir una P. Y delante de cada acuerdo una A. Los subpuntos han de empezar por espacios en blanco. Dentro de un punto (P) pueden haber subpuntos (P) o acuerdos (A). Dentro de un acuerdo no puede existir nada. Por ejemplo:<br><samp>P Informe del rector<br>P Comissión Económica<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;A Aprobación del estado de tesorería<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;P Aprobación del expediente 03/23<br>A Discutir tema central<br>P Conclusiones<br></samp>"
@@ -93,7 +97,7 @@ msgstr "Número de acuerdo"
 
 #: ./genweb/organs/content/acord.py:90
 #: ./genweb/organs/content/punt.py:78
-#: ./genweb/organs/content/templates/organgovern_view.pt:148
+#: ./genweb/organs/content/templates/organgovern_view.pt:174
 msgid "Agreement and document label"
 msgstr "Estado"
 
@@ -103,17 +107,17 @@ msgid "Agreement and document labels"
 msgstr "Estados de aprobación"
 
 #: ./genweb/organs/content/acord.py:78
-#: ./genweb/organs/content/templates/organgovern_view.pt:145
+#: ./genweb/organs/content/templates/organgovern_view.pt:171
 msgid "Agreement number"
 msgstr "Número de acuerdo"
 
-#: ./genweb/organs/content/templates/organgovern_view.pt:137
+#: ./genweb/organs/content/templates/organgovern_view.pt:163
 msgid "Agreements list"
 msgstr "Acuerdos"
 
 #: ./genweb/organs/content/document.py:53
 msgid "Alternate description"
-msgstr "Contenido reservado"
+msgstr "Contenido restringido"
 
 #: ./genweb/organs/content/impersonate_as.py:47
 #: ./genweb/organs/content/templates/sessio_view.pt:386
@@ -214,13 +218,13 @@ msgstr "Se han guardado los cambios."
 msgid "Cliqueu <a href=\"./\">aqui</a> per tornar al mode de visualitzacio per defecte."
 msgstr "Clique <a href=\"./\">aquí</a> para volver al modo de visualización por defecto."
 
-#: ./genweb/organs/content/templates/organgovern_view.pt:40
+#: ./genweb/organs/content/templates/organgovern_view.pt:68
 msgid "Composicio"
 msgstr "Composición"
 
 #: ./genweb/organs/content/document.py:54
 msgid "Content used to hide protected content"
-msgstr "Contenido de carácter reservado del documento, para uso interno."
+msgstr "Contenido de carácter restringido del documento, para uso interno."
 
 #: ./genweb/organs/content/document.py:45
 #: ./genweb/organs/content/templates/document_view.pt:26
@@ -229,7 +233,7 @@ msgstr "Contenido público"
 
 #: ./genweb/organs/content/templates/document_view.pt:20
 msgid "Contingut reservat"
-msgstr "Contenido reservado"
+msgstr "Contenido restringido"
 
 #: ./genweb/organs/content/templates/sessio_view.pt:157
 msgid "Convocatoria"
@@ -251,6 +255,10 @@ msgstr "Se ha creado un punto."
 #: ./genweb/organs/content/templates/impersonate_as.pt:36
 msgid "Dades"
 msgstr "Datos"
+
+#: ./genweb/organs/content/templates/organgovern_view.pt:216
+msgid "Data"
+msgstr "Fecha"
 
 #: ./genweb/organs/content/templates/sessio_view.pt:273
 msgid "Data i hora"
@@ -355,7 +363,7 @@ msgstr "Fichero público"
 
 #: ./genweb/organs/content/templates/file_view.pt:24
 msgid "Fitxer reservat"
-msgstr "Fichero reservado"
+msgstr "Fichero restringido"
 
 #: ./genweb/organs/content/templates/acord_view.pt:42
 #: ./genweb/organs/content/templates/punt+subpunt_view.pt:39
@@ -433,6 +441,18 @@ msgstr "Invitados"
 #: ./genweb/organs/content/sessio.py:91
 msgid "Invited members help"
 msgstr "Lista de nombres de los miembros que habrá que añadir a la convocatoria de la sesión. Hay que informar sus direcciones de correo en el campo correspondiente de la pestaña Asistentes."
+
+#: ./genweb/organs/content/templates/organgovern_view.pt:52
+msgid "List acords"
+msgstr "Lista acuerdos"
+
+#: ./genweb/organs/content/templates/organgovern_view.pt:60
+msgid "List actes"
+msgstr "Lista actas"
+
+#: ./genweb/organs/content/templates/organgovern_view.pt:44
+msgid "List sessions"
+msgstr "Lista sesiones"
 
 #: ./genweb/organs/content/templates/informar_view.pt:23
 msgid "Llista de punts en el format del butlleti."
@@ -521,10 +541,6 @@ msgstr "Se ha modificado una acta."
 #: ./genweb/organs/hooks.py:78
 msgid "Modified punt"
 msgstr "Se ha modificado un punto."
-
-#: ./genweb/organs/content/templates/organgovern_view.pt:32
-msgid "Mostrar dades de organ"
-msgstr "Muestra datos del órgano de gobierno"
 
 #: ./genweb/organs/browser/views.py:220
 msgid "Moved subpunt by drag&drop"
@@ -663,12 +679,12 @@ msgstr "Imagen de cabecera personalizada"
 msgid "Persones Convocades"
 msgstr "Convocados"
 
-#: ./genweb/organs/content/templates/organgovern_view.pt:50
+#: ./genweb/organs/content/templates/organgovern_view.pt:77
 msgid "Persones assistents"
 msgstr "Miembros"
 
 #: ./genweb/organs/content/templates/impersonate_as.pt:82
-#: ./genweb/organs/content/templates/organgovern_view.pt:53
+#: ./genweb/organs/content/templates/organgovern_view.pt:80
 #: ./genweb/organs/content/templates/sessio_view.pt:211
 msgid "Persones convidades"
 msgstr "Invitados"
@@ -693,7 +709,7 @@ msgstr "Fichero público"
 
 #: ./genweb/organs/content/file.py:52
 msgid "Please upload a reserved file"
-msgstr "Fichero reservado"
+msgstr "Fichero restringido"
 
 #: ./genweb/organs/content/templates/sessio_view.pt:142
 msgid "Presentacio"
@@ -760,7 +776,7 @@ msgstr "Numera acuerdos"
 
 #: ./genweb/organs/content/file.py:53
 msgid "Reserved file description"
-msgstr "Fichero que contiene la parte reservada del documento."
+msgstr "Fichero que contiene la parte restringida del documento."
 
 #: ./genweb/organs/content/organgovern.py:21
 msgid "Restricted_to_Affected"
@@ -816,7 +832,7 @@ msgstr "Sesión"
 msgid "Session Title"
 msgstr "Título de la sesión"
 
-#: ./genweb/organs/content/templates/organgovern_view.pt:86
+#: ./genweb/organs/content/templates/organgovern_view.pt:108
 msgid "Session date"
 msgstr "Fecha de la sesión"
 
@@ -850,7 +866,7 @@ msgstr "Acta"
 msgid "Session order description"
 msgstr "Apartado para indicar los puntos del orden del día y el desarrollo de la sesión."
 
-#: ./genweb/organs/content/templates/organgovern_view.pt:92
+#: ./genweb/organs/content/templates/organgovern_view.pt:114
 msgid "Session start"
 msgstr "Hora de inicio"
 
@@ -864,9 +880,13 @@ msgstr "Fecha y hora de inicio de la sesión"
 msgid "Session start time"
 msgstr "Hora de inicio de la sesión"
 
-#: ./genweb/organs/content/templates/organgovern_view.pt:78
+#: ./genweb/organs/content/templates/organgovern_view.pt:100
 msgid "Sessions list"
 msgstr "Sesiones"
+
+#: ./genweb/organs/content/templates/organgovern_view.pt:36
+msgid "Show info organ"
+msgstr "Muestra datos del órgano"
 
 #: ./genweb/organs/content/organsfolder.py:17
 msgid "Si es vol fer servir la imatge estandard o la imatge que es puja a continuació"
@@ -889,7 +909,7 @@ msgstr "Direcciones de correo de los afectados (Para enviar información de la s
 msgid "Stakeholders mail address help."
 msgstr "Listado de direcciones de las personas afectadas a las cuales se notificará."
 
-#: ./genweb/organs/content/templates/organgovern_view.pt:95
+#: ./genweb/organs/content/templates/organgovern_view.pt:117
 msgid "State"
 msgstr "Estado"
 
@@ -943,7 +963,7 @@ msgstr "Punto"
 msgid "Tancar"
 msgstr "Cierra"
 
-#: ./genweb/organs/content/templates/organgovern_view.pt:83
+#: ./genweb/organs/content/templates/organgovern_view.pt:105
 #: ./genweb/organs/content/templates/sessio_view.pt:326
 msgid "Title"
 msgstr "Título"
