--- a/genweb/organs/locales/ca/LC_MESSAGES/genweb.organs.po
+++ b/genweb/organs/locales/ca/LC_MESSAGES/genweb.organs.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2017-07-18 08:54+0000\n"
+"POT-Creation-Date: 2017-07-18 09:06+0000\n"
 "PO-Revision-Date: 2017-04-20 14:05+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -345,7 +345,7 @@ msgstr "Esteu visualitzant la sessió amb el rol"
 #: ./genweb/organs/content/acta.py:81
 #: ./genweb/organs/content/sessio.py:98
 msgid "Excused members"
-msgstr "Excusats"
+msgstr "Excusats/Excusades"
 
 #: ./genweb/organs/content/acta.py:82
 #: ./genweb/organs/content/sessio.py:99
@@ -411,13 +411,14 @@ msgstr "Creació àgil"
 
 #: ./genweb/organs/content/acta.py:65
 #: ./genweb/organs/content/sessio.py:82
+#: ./genweb/organs/content/templates/impersonate_as.pt:79
 msgid "Incoming members list"
-msgstr "Convocats"
+msgstr "Convocats/Convocades"
 
 #: ./genweb/organs/content/acta.py:66
 #: ./genweb/organs/content/sessio.py:83
 msgid "Incoming members list help"
-msgstr "Llista dels noms dels membres convocats. Inicialment són els membres que composen l'òrgan."
+msgstr "Llista de noms dels membres convocats. Inicialment són els membres que composen l'òrgan."
 
 #: ./genweb/organs/browser/viewlets_templates/header.pt:41
 msgid "Info_del_Servei"
@@ -442,14 +443,14 @@ msgstr "El fitxer seleccionat no sembla en format d'àudio."
 
 #: ./genweb/organs/browser/views/acta_print.pt:68
 #: ./genweb/organs/content/acta.py:73
-#: ./genweb/organs/content/sessio.py:90
+#: ./genweb/organs/content/organgovern.py:95
 msgid "Invited members"
-msgstr "Convidats"
+msgstr "Convidats/Convidades"
 
 #: ./genweb/organs/content/acta.py:74
 #: ./genweb/organs/content/sessio.py:91
 msgid "Invited members help"
-msgstr "Llista de noms dels membres que caldrà afegir a la convocatòria de la sessió. Les seves adreces caldrà informar-les al camp corresponent de la pestanya Assistents."
+msgstr "Llista de noms dels membres que caldrà afegir a la convocatòria de la sessió."
 
 #: ./genweb/organs/content/templates/organgovern_view.pt:41
 msgid "List acords"
@@ -659,10 +660,6 @@ msgstr "Òrgan de govern"
 msgid "Organ logo"
 msgstr "Logo"
 
-#: ./genweb/organs/content/organgovern.py:95
-msgid "Organ permanently invited people"
-msgstr "Convidats"
-
 #: ./genweb/organs/content/organgovern.py:96
 msgid "Organ permanently invited people description."
 msgstr "Llista de noms dels membres convidats a les sessions d'aquest òrgan de forma sistemàtica tot i no formar-ne part."
@@ -679,25 +676,9 @@ msgstr "Organs de Govern package"
 msgid "Organs folder logo"
 msgstr "Imatge de capçalera personalitzada"
 
-#: ./genweb/organs/content/templates/impersonate_as.pt:79
-#: ./genweb/organs/content/templates/sessio_view.pt:211
-msgid "Persones Convocades"
-msgstr "Convocats"
-
 #: ./genweb/organs/content/templates/organgovern_view.pt:63
 msgid "Persones assistents"
 msgstr "Membres"
-
-#: ./genweb/organs/content/templates/impersonate_as.pt:82
-#: ./genweb/organs/content/templates/organgovern_view.pt:66
-#: ./genweb/organs/content/templates/sessio_view.pt:214
-msgid "Persones convidades"
-msgstr "Convidats"
-
-#: ./genweb/organs/content/templates/impersonate_as.pt:85
-#: ./genweb/organs/content/templates/sessio_view.pt:217
-msgid "Persones excusades"
-msgstr "Excusats"
 
 #: ./genweb/organs/content/organgovern.py:50
 #: ./genweb/organs/content/sessio.py:40
