--- a/genweb/organs/locales/es/LC_MESSAGES/genweb.organs.po
+++ b/genweb/organs/locales/es/LC_MESSAGES/genweb.organs.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2017-07-18 08:54+0000\n"
+"POT-Creation-Date: 2017-07-18 09:06+0000\n"
 "PO-Revision-Date: 2017-04-20 14:05+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -345,7 +345,7 @@ msgstr "Está visualizando la sesión con el rol de"
 #: ./genweb/organs/content/acta.py:81
 #: ./genweb/organs/content/sessio.py:98
 msgid "Excused members"
-msgstr "Excusados"
+msgstr "Excusados/Excusadas"
 
 #: ./genweb/organs/content/acta.py:82
 #: ./genweb/organs/content/sessio.py:99
@@ -411,8 +411,9 @@ msgstr "Creación ágil"
 
 #: ./genweb/organs/content/acta.py:65
 #: ./genweb/organs/content/sessio.py:82
+#: ./genweb/organs/content/templates/impersonate_as.pt:79
 msgid "Incoming members list"
-msgstr "Convocados"
+msgstr "Convocados/Convocadas"
 
 #: ./genweb/organs/content/acta.py:66
 #: ./genweb/organs/content/sessio.py:83
@@ -442,9 +443,9 @@ msgstr "El fichero seleccionado no parece en formato de audio."
 
 #: ./genweb/organs/browser/views/acta_print.pt:68
 #: ./genweb/organs/content/acta.py:73
-#: ./genweb/organs/content/sessio.py:90
+#: ./genweb/organs/content/organgovern.py:95
 msgid "Invited members"
-msgstr "Invitados"
+msgstr "Invitados/Invitadas"
 
 #: ./genweb/organs/content/acta.py:74
 #: ./genweb/organs/content/sessio.py:91
@@ -659,10 +660,6 @@ msgstr "Órgano de gobierno"
 msgid "Organ logo"
 msgstr "Logo"
 
-#: ./genweb/organs/content/organgovern.py:95
-msgid "Organ permanently invited people"
-msgstr "Invitados"
-
 #: ./genweb/organs/content/organgovern.py:96
 msgid "Organ permanently invited people description."
 msgstr "Lista de nombres de las personas que se invitan a este órgano de forma sistemàtica, sin necesidad de formar parte de él."
@@ -679,25 +676,9 @@ msgstr "Organs de Govern package"
 msgid "Organs folder logo"
 msgstr "Imagen de cabecera personalizada"
 
-#: ./genweb/organs/content/templates/impersonate_as.pt:79
-#: ./genweb/organs/content/templates/sessio_view.pt:211
-msgid "Persones Convocades"
-msgstr "Convocados"
-
 #: ./genweb/organs/content/templates/organgovern_view.pt:63
 msgid "Persones assistents"
 msgstr "Miembros"
-
-#: ./genweb/organs/content/templates/impersonate_as.pt:82
-#: ./genweb/organs/content/templates/organgovern_view.pt:66
-#: ./genweb/organs/content/templates/sessio_view.pt:214
-msgid "Persones convidades"
-msgstr "Invitados"
-
-#: ./genweb/organs/content/templates/impersonate_as.pt:85
-#: ./genweb/organs/content/templates/sessio_view.pt:217
-msgid "Persones excusades"
-msgstr "Excusados"
 
 #: ./genweb/organs/content/organgovern.py:50
 #: ./genweb/organs/content/sessio.py:40
