--- a/genweb/organs/locales/ca/LC_MESSAGES/genweb.organs.po
+++ b/genweb/organs/locales/ca/LC_MESSAGES/genweb.organs.po
@@ -54,11 +54,11 @@ msgstr "Acta"
 #: ./genweb/organs/content/acta.py:110
 #: ./genweb/organs/content/templates/acta_view.pt:165
 msgid "Acta PDF"
-msgstr "Acta en format PDF"
+msgstr "Fitxer annexat a l'acta"
 
 #: ./genweb/organs/content/acta.py:111
 msgid "Acta PDF file description"
-msgstr "Fitxer en format PDF de l'acta. Només s'accepten fitxers PDF."
+msgstr "NOTA: Només s'accepta un fitxer en format PDF."
 
 #: ./genweb/organs/content/templates/organgovern_view.pt:37
 msgid "Actes"
