--- a/genweb/organs/locales/ca/LC_MESSAGES/genweb.organs.po
+++ b/genweb/organs/locales/ca/LC_MESSAGES/genweb.organs.po
@@ -54,7 +54,7 @@ msgstr "Acta"
 #: ./genweb/organs/content/acta.py:110
 #: ./genweb/organs/content/templates/acta_view.pt:165
 msgid "Acta PDF"
-msgstr "Fitxer annexat a l'acta"
+msgstr "Fitxer adjunt"
 
 #: ./genweb/organs/content/acta.py:111
 msgid "Acta PDF file description"
